<resources>
    <string name="app_name">Project Management</string>
    <string name="title_activity_listing">ListingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="forget_password_hyperlink"><u>Forget Password</u></string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="emailExample">xyz@email.com</string>
    <string name="notRegistered">Not registered?</string>
    <string name="signUp">Sign Up</string>
    <string name="password">password</string>
    <string name="signIn">Sign In</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="emailId">Email ID</string>
    <string name="fullName">Full Name</string>
    <string name="alreadyAccount">Already have an account?</string>
    <string name="passwordRegister">Password</string>
    <string name="R">Role</string>
    <string-array name="SpinnerRole">
        <item>Manager</item>
        <item>Team Member</item>
    </string-array>
    <string-array name="SpinnerRoleTaskAssignment">
        <item>Member</item>
        <item>Member1</item>
        <item>Member2</item>
        <item>Member3</item>
    </string-array>
    <string name="taskName">Task Name</string>
    <string name="taskStatus">Task Status</string>
    <string name="assignedTo">Assigned To</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>