<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editFullNameRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:background="@drawable/shape"
        android:drawableStart="@drawable/ic_user"
        android:hint="@string/fullName"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline15" />

    <ImageView
        android:id="@+id/imgProfileImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_person"
        app:layout_constraintBottom_toTopOf="@+id/editFullNameRegister"
        app:layout_constraintEnd_toStartOf="@+id/btnAddProfileImage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline15"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnAddProfileImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/blue1"
        android:text="Upload photo"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/editFullNameRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgProfileImage"
        app:layout_constraintTop_toTopOf="@+id/guideline15"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editMobileNumberRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/shape"
        android:drawableStart="@drawable/ic_phone"
        android:hint="@string/mobileNumber"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/editEmailRegister"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editEmailRegister"
        app:layout_constraintTop_toBottomOf="@+id/editEmailRegister" />

    <EditText
        android:id="@+id/editEmailRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape"
        android:drawableStart="@drawable/ic_mail"
        android:hint="@string/emailId"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/editFullNameRegister"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editFullNameRegister"
        app:layout_constraintTop_toBottomOf="@+id/editFullNameRegister" />

    <EditText
        android:id="@+id/editNewPasswordRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/passwordRegister"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/editMobileNumberRegister"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editMobileNumberRegister"
        app:layout_constraintTop_toBottomOf="@+id/editMobileNumberRegister" />

    <Spinner
        android:id="@+id/roleSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:autofillHints="Role"
        android:entries="@array/SpinnerRole"
        android:minHeight="48dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="@+id/editNewPasswordRegister"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editNewPasswordRegister"
        app:layout_constraintTop_toBottomOf="@+id/editNewPasswordRegister" />


    <Button
        android:id="@+id/btnSignUpRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/blue1"
        android:text="@string/signUp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/roleSpinner"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="@+id/roleSpinner"
        app:layout_constraintTop_toBottomOf="@+id/roleSpinner" />

    <TextView
        android:id="@+id/txtAlreadyAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/alreadyAccount"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/btnSignUpRegister"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnSignUpRegister"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUpRegister" />

    <Button
        android:id="@+id/btnSignInRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="64dp"
        android:background="@color/blue1"
        android:text="@string/signIn"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtAlreadyAccount"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtAlreadyAccount"
        app:layout_constraintTop_toBottomOf="@+id/txtAlreadyAccount"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

</androidx.constraintlayout.widget.ConstraintLayout>